# curl-gen-web

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  cabal.project  curl-gen-server.cabal  curl-gen-wasm.cabal  nginx.conf  package-lock.json  package.json  package.yaml  webpack.config.js
.github/: dependabot.yml
.github/workflows/: docker.yml  pages.yml
app/: Main.hs
server/: curl-gen-wasm.wasm  index.js
static/: index.css  index.html  index.mjs
wasm/: Main.hs
